# wasm-hackathon

./: README.md  References.md
code/c/: hellonum.c  hellonum.ll  hellonum.s
code/dragon-curve-emscripten/: dragon-curve.js  dragon-curve.wat  index.html
code/dragon-curve-llvm/: index.html
code/dragon-curve-llvm-docker/: Dockerfile
code/dragon-curve-llvm-local/: dragon-curve.wasm  index.html
code/dragon-curve-rust/: Cargo.toml
code/dragon-curve-rust/src/: lib.rs
code/scratchpad/dragon-curve-llvm-docker/: dragon-curve-opt.wasm
code/scratchpad/hello-c/: .gitignore  hello  hello.c  hello.ll  hello.s  hello.wasm  hello.wat
code/scratchpad/hello-emcc/: hello  hello-emcc.c  hello-emcc.js  hello-emcc.wasm  hello.c  index.html
code/scratchpad/hello-func-emcc/: hello-func  hello-func-clang.wasm  hello-func.ll  hello-func.wasm
code/scratchpad/hello-loop-emcc/: hello-loop  hello-loop.ll  hello-loop.wat
code/scratchpad/hello-rust/: hello  hello.rs  hello.wasm
code/scratchpad/wasm-starter/: Cargo.toml  index.html
code/the-basics/c++/: helloworld
code/the-basics/hello-webassembly-rust/: .gitignore  Cargo.toml  index.html
code/the-basics/hello-webassembly-rust/src/: lib.rs
code/wasm-apps/wasm-starter-bindgen/: Cargo.toml  index.html
nerd-notes/: README.md  c-to-web-assembly-1.md  c-to-web-assembly-2.md  c-to-web-assembly.md  hello-web-in-rust.md  hello-webassembly-in-c.md  hello-webassembly-in-rust.md  hello-world-in-c-emcc.md  hello-world-in-c-wasi-sdk.md  hello-world-in-rust.md  install-wasm-tools.md  rust-to-web-assembly.md  wasm-tools.md
(+32 files in other folders)
