[package]
name = "hello-webassembly-rust"
version = "0.1.0"
authors = ["Anand Sharma <anasharm@cisco.com>"]
edition = "2018"

[lib]
name = "hello_webassembly_rust"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.70"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O2", "--enable-mutable-globals"]